--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ on:
   # 监听push操作
   push:
     branches:
-      - main # 这里只配置了main分支，所以只有推送main分支才会触发以下任务
+      - master # 这里只配置了main分支，所以只有推送main分支才会触发以下任务
   pull_request:
 
   # 这个选项可以使你手动在 Action tab 页面触发工作流
