--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "marked": "^13.0.3",
+    "mitt": "^3.0.1",
     "vue": "^3.4.29",
     "vue-markdown": "^2.2.4",
     "vue-router": "^4.4.0"
